-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.0, 5.3.0 Beta1
-
None
-
Windows 7
-
b85b78f17d3d18887b409a3ce9d2f2c71ae68844 (qtbase/5.4, 3.2.2015, 5.4.2)
When pressing CTRL+SHIFT+number on a German keyboard then the key() you get in the key press is not always as expected. For instance in the example if you press CTRL+SHIFT+2 then you get @ as the key(). Whereas there does not seem to be any indication that @ should be sent. It should be " instead as that is SHIFT+2 since there is no special key to display here like with Norwegian keyboards. This seems to be caused by an incorrect fallback or something like that from having a first glance at the code in question.
- resulted in
-
QTBUG-44021 [REG]: Shortcuts CTRL+C, CRTL+V don't work if keyboard switched to cyrillic layout.
-
- Closed
-
| For Gerrit Dashboard: QTBUG-35734 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 86835,2 | Windows: Handle "false positives" in ToUnicode calls | stable | qt/qtbase | Status: ABANDONED | +2 | 0 |
| 88413,2 | Windows: Fix call of ToUnicode | 5.3 | qt/qtbase | Status: ABANDONED | +2 | 0 |
| 95543,2 | Windows: Fix call of ToUnicode | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |
| 104671,4 | Suppress Ctrl/Ctrl+Shift keypresses in line/text edits. | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |
| 104672,2 | Revert "Windows: Fix call of ToUnicode" | 5.4.1 | qt/qtbase | Status: MERGED | +2 | 0 |
| 432702,5 | macOS: Remove hard-coded logic for determining if key event has text | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 433455,2 | macOS: Remove hard-coded logic for determining if key event has text | 6.4 | qt/qtbase | Status: MERGED | +2 | 0 |